--- a/api/depSchedule.yml
+++ b/api/depSchedule.yml
@@ -782,6 +782,9 @@ components:
           type: boolean
           default: false
           description: "Планируемое подразделение? (true/false)"
+        location:
+          type: string
+          description: "Начальное местонахождение подразделения"
         parentId:
           type: integer
           format: int64
@@ -792,6 +795,7 @@ components:
       required:
         - title
         - calendarId
+        - location
       allOf:
         - $ref: "#/components/schemas/Unit"
         - type: object
